Write evaluation stuff

--- a/thesis/refs.bib
+++ b/thesis/refs.bib
@@ -57,24 +57,24 @@
   title = {The {{Swift Programming Language}}: {{Swift}} 5.3},
   author = {{Apple}},
   date = {2020},
-  journaltitle = {Swift.org},
   url = {https://docs.swift.org/swift-book/},
   urldate = {2020-11-01},
   abstract = {Swift is a general-purpose programming language built using a modern approach to safety, performance, and software design patterns.},
   file = {/home/philipp/Zotero/storage/VCTJ4LH7/documentation.html},
-  langid = {english}
+  langid = {english},
+  organization = {{Swift.org}}
 }
 
 @online{apple2020swifta,
   title = {Swift {{Compiler}}},
   author = {{Apple}},
   date = {2020},
-  journaltitle = {Swift.org},
   url = {https://swift.org/swift-compiler/},
   urldate = {2020-11-01},
   abstract = {Swift is a general-purpose programming language built using a modern approach to safety, performance, and software design patterns.},
   file = {/home/philipp/Zotero/storage/NAZ7WV3P/swift-compiler.html},
-  langid = {english}
+  langid = {english},
+  organization = {{Swift.org}}
 }
 
 @article{bartholomew-biggs2000automatic,
@@ -947,22 +947,22 @@
   title = {Implement {{Your Own Automatic Differentiation}} with {{Julia}} in {{ONE}} Day},
   author = {Luo, Roger},
   date = {2018-10-23},
-  journaltitle = {Half Integer},
   url = {http://rogerluo.me/blog/2018/10/23/write-an-ad-in-one-day/index.html},
   urldate = {2019-12-30},
   abstract = {I was playing with AutoGrad.jl and Zygote.jl, they both look awesome, and AutoGrad.jl has already been applied to the machine learning framework in Julia: Knet.jl. When I tried to read the source code},
-  file = {/home/philipp/Zotero/storage/QVSF46UN/write-an-ad-in-one-day.html}
+  file = {/home/philipp/Zotero/storage/QVSF46UN/write-an-ad-in-one-day.html},
+  organization = {{Half Integer}}
 }
 
 @online{luo2019implement,
   title = {Implement {{Your Own Source To Source AD}} in {{ONE}} Day!},
   author = {Luo, Roger},
   date = {2019-07-31},
-  journaltitle = {Half Integer},
   url = {http://rogerluo.me/blog/2019/07/27/yassad/index.html},
   urldate = {2019-12-30},
   abstract = {I wrote a blog post about how to implement your own (operator overloading based) automatic differentiation (AD) in one day (actually 3 hrs) last year. AD looks like magic sometimes, but I'm going to t},
-  file = {/home/philipp/Zotero/storage/INQWEZXX/yassad.html}
+  file = {/home/philipp/Zotero/storage/INQWEZXX/yassad.html},
+  organization = {{Half Integer}}
 }
 
 @article{maclaurinautograd,
@@ -1313,9 +1313,9 @@
   title = {Introduction to {{Automatic Differentiation}}},
   author = {Radul, Alexey},
   date = {2013},
-  journaltitle = {Conversations},
   url = {https://alexey.radul.name/ideas/2013/introduction-to-automatic-differentiation/},
-  annotation = {Archive-URL: https://web.archive.org/web/20190405034941/https://alexey.radul.name/ideas/2013/introduction-to-automatic-differentiation/}
+  annotation = {Archive-URL: https://web.archive.org/web/20190405034941/https://alexey.radul.name/ideas/2013/introduction-to-automatic-differentiation/},
+  organization = {{Conversations}}
 }
 
 @article{ramsey2002stochastic,
@@ -1390,10 +1390,10 @@
   title = {Reverse-Mode Automatic Differentiation: A Tutorial},
   author = {Ruffwind, Phil},
   date = {2016-12-30},
-  journaltitle = {Rufflewind's Scratchpad},
   url = {https://rufflewind.com/2016-12-30/reverse-mode-automatic-differentiation},
   urldate = {2019-04-20},
-  file = {/home/philipp/Zotero/storage/LNDNUD75/reverse-mode-automatic-differentiation.html}
+  file = {/home/philipp/Zotero/storage/LNDNUD75/reverse-mode-automatic-differentiation.html},
+  organization = {{Rufflewind's Scratchpad}}
 }
 
 @thesis{ruozzi2011message,
@@ -1549,12 +1549,12 @@
   shorttitle = {{{XLA}}},
   author = {{TensorFlow Developers}},
   date = {2020-09-02},
-  journaltitle = {TensorFlow},
   url = {https://www.tensorflow.org/xla},
   urldate = {2020-10-27},
   abstract = {XLA is a compiler-based linear algebra execution engine.},
   file = {/home/philipp/Zotero/storage/TIFIE6HA/xla.html},
-  langid = {english}
+  langid = {english},
+  organization = {{TensorFlow}}
 }
 
 @inproceedings{tokui2015chainer,
