--- a/thesis/tracking_models.tex
+++ b/thesis/tracking_models.tex
@@ -108,12 +108,10 @@ the association between the assumption and the array elements.  This part of the
 most intricate one, and not complete; there may exist cases where mutation is able to
 \enquote{circumvent} the dependecy analysis.  Additionally, the matching between indexing arguments
 involves some careful treatment of variable names; the existing \dppljl{} API for this functionality
-is not very comprehensive.
-
-Due to this, the current implementation of \autogibbsjl{} currently only supports \enquote{simple}
-indexing by one tuple of integers.  Other, more general indexing styles allowed in Julia could be
-added in future extensions.  Furthermore, broadcasting tilde statements, that are supported in
-\dppljl{}, are not supported by \autogibbsjl{} either.
+is not very comprehensive.  Due to this, the current implementation of \autogibbsjl{} currently only
+supports \enquote{simple} indexing by one tuple of integers.  Other, more general indexing styles
+allowed in Julia could be added in future extensions.  Furthermore, broadcasting tilde statements,
+that are supported in \dppljl{}, are not supported by \autogibbsjl{} either.
 
 \newthought{As an example} for the resulting graphs, take the two simple models in
 listing~\ref{lst:dependency-examples}.  The pretty-printed dependency \jlinl{Graph}s of them are
@@ -204,18 +202,171 @@ end
 \end{figure}
 
 
-\section{JAGS-Style Automatic Calculation of Gibbs Conditionals}
-\label{sec:jags-style-conditionals}
+\section{Automatic Calculation of Gibbs Conditionals}
+\label{sec:automatic-conditionals}
 
-Gibbs sampler implementation for Turing; likelihood closures; conditional likelihood extraction
+The ultimate contribution of this work is to utilize the dependency extraction system to extend
+\turingjl{} with JAGS-style automatic calculation of Gibbs Conditionals.  In JAGS (and its sibling,
+BUGS) conditional extraction works over a wide range of variable types \parencite{plummer2003jags}
+by symbolic analysis and recognition of several patterns (e.g., conjugate distributions from
+exponential families, log-concave or compactly supported distributions; see
+\textcite{lunn2000winbugs}.), which is possible since the class of models is constrained by the
+modelling language, and available in completely structured form.
 
-This currently is implemented as a separate sampler (due to versioning), but the Gibbs conditional
-functionality has been added to \turingjl{} itself and should be used instead for static
-conditionals.
+In \turingjl{}, models are much less restricted, and the symbolic form has to recovered from
+outside, as we have seen.  To focus on the principal ideas and not to extend the scope too much, the
+implementation described in this section was restricted to finite, discrete conditionals, which are
+trivial to sample from, given the respective log-density.  Since the construction of conditional
+log-densities is independent from the normalization step, though, this can serve as a stating point
+for further, more general conditional samplers, as those in JAGS and BUGS.  Additionally, and this
+is a more fundamental limitation, the models to which the extraction algorithm can be applied must
+be static in a specific sense: the whole Markov blanket of the variable in question must be
+reachedable and unique within one run of model tracking.  A large fraction of the models used in
+practise do fulfill this condition, though.  As this problem is difficult so solve in general, the
+same constraint applies to JAGS and BUGS, which makes \autogibbsjl{} not more limited than these.
 
+The implementation of the conditional extraction system involves three main parts:
+\begin{enumerate}
+  \firmlist
+\item Extracting the symbolic form of the conditional likelihood of Markov blankets in a given
+  dependency graph.
+\item Constructing closures calculating the normalized discrete distribution from these likelihoods.
+\item Providing a Gibbs-component sampler for \turingjl{}, that can utilize the resulting
+  conditional distributions.
+\end{enumerate}
+The third step turned out to be the easiest, since the sampling system of \turingjl{} is designed to
+be extensible.  Ideally, a Gibbs-conditional sampler would have first been added to \turingjl{} and
+then simply been reused for \autogibbsjl{}; in practice, it worked out the other way round, and the
+\autogibbsjl{} sampler has, in generalized form, been added to \turingjl{} afterwards (without the
+automatic extraction, only supporting user-provided conditional distributions).
+
+likelihood closures; conditional likelihood extraction\todo{TODO}
 
 \section{Evaluation}
 \label{sec:autogibbs-eval}
+
+To begin with a qualitative assessment, it must be admitted that \autogibbsjl{} is, when run
+manually and only once, empirically so noticeably slow, that a user may be tempted to dismiss it
+outright (concretely speaking, extraction of one conditional for some not-so-large models takes
+\(20\) to \(200\) seconds on the author's laptop).  This is a valid point, but two counter-arguments
+must be considered.  For one, the implementation is just more conceptual than optimized.  Much of
+the slow-down could be mitigated by improving key parts of \autogibbsjl{} and \irtrackerjl{}.  In
+addition to that, one must realize where this appearent slowness comes from: namely, from
+compilation, and therein primarily type inference, of the functions handling all the strongly typed
+expression trees.  Even neglecting optimization possibilities of these, compilation takes place only
+once; as soon as a conditional is constructed, it can be reused in arbitrarily many sampling runs of
+the same model.  The finished conditionals then do not take so much time anymore, on the contrary:
+they are much faster than other within-Gibbs samplers, since they only involve evaluating a fixed
+expression, constructing a distribution, and sampling from it once (and even this could be sped up
+further).
+
+So, overall, while the implementation in current form is not very applicable in practise, it is very
+much so in principle.  Based on the lessons learned through this work, further contributions to
+Gibbs sampling in \turingjl{} are already planned (although not necessarily based on
+\autogibbsjl{}).
+
+\newthought{For a more {q}uantitative} point of view, let us now turn to some empirical evaluations.
+Besides several unit tests for correctness of the derived dependencies and conditionals on a variety
+of models chosen to test certain features and corner cases, an experimental comparison of
+\autogibbsjl{} and existing \turingjl{} samplers has been conducted.  For this purpose, three
+off-the-shelf Bayesian models were chosen: a Gaussian mixture model,
+\begin{equation}
+  \label{eq:gmm}
+  \begin{aligned}
+    \mu_{k} &\from \Normal(0, \sigma_{1}), \quad k = 1, \ldots, K \\
+    w &\from \distr{Dirichlet(K)} \\
+    z_{n} &\from \distr{Discrete}([1, \ldots, K], w), \quad n = 1, \ldots, N \\
+    x_{n} &\from \Normal(\mu_{z_{n}}, \sigma_{1}), \quad n = 1, \ldots, N;
+  \end{aligned}
+\end{equation}
+a hidden Markov model,
+\begin{equation}
+  \label{eq:hmm}
+  \begin{aligned}
+    T_{k} &\from \distr{Dirichlet}(K), \quad k = 1, \ldots, K \\
+    m_{k} &\from \Normal(k, \sigma_{1}), \quad k = 1, \ldots, K \\
+    s_{1} &\from \distr{Categorical}(K) \\
+    s_{k} &\from \distr{Categorical}(T_{s_{k-1}}), \quad k = 2, \ldots, N \\
+    x_{k} &\from \Normal(m_{s_{k}}, \sigma_{2}), \quad k = 1, \ldots, N;
+  \end{aligned}
+\end{equation}
+and an infinite mixture model in stick-breaking construction\todo{cite}, to represent a Bayesian
+nonparametric example:
+\begin{equation}
+  \label{eq:imm}
+  \begin{aligned}
+    w &\from \distr{TruncatedStickBreakingProcess(\alpha, K)} \\
+    z_{n} &\from \distr{Categorical}(w), \quad n = 1, \ldots, N \\
+    \mu_{k} &\from \Normal(0, \sigma_{1}), \quad k = 1, \ldots, K \\
+    y_{n} &\from \Normal(\mu_{z_{n}}, \sigma_{2}), \quad n = 1, \ldots, N.
+  \end{aligned}
+\end{equation}
+The models are implemented in \dppljl{} as shown in listing~\ref{lst:evaluation-models}.
+
+\begin{lstfloat}[p]
+\begin{lstlisting}[style=lstfloat]
+@model function gmm(x, K)
+    N = length(x)
+    μ ~ filldist(Normal(0.0, s1_gmm), K)  # Cluster centers
+    w ~ Dirichlet(K, 1/K)  # Cluster association prior
+    z ~ filldist(DiscreteNonParametric(1:K, w), N)  # Cluster assignments
+
+    for n = 1:N
+        x[n] ~ Normal(μ[z[n]], s2_gmm)  # Observations
+    end
+end
+
+@model function hmm(x, K, ::Type{T}=Float64) where {T<:Real}
+    N = length(x)
+    s = zeros(Int, N)  # State sequence
+    m = Vector{T}(undef, K)  # Emission matrix
+    T = Vector{Vector{T}}(undef, K)  # Transition matrix
+
+    # Assign distributions to each element of the transition matrix 
+    # and the emission matrix.
+    for i = 1:K
+        T[i] ~ Dirichlet(K, 1/K)
+        m[i] ~ Normal(i, s1_hmm)
+    end
+    
+    # Observe each point of the input
+    s[1] ~ Categorical(K)
+    x[1] ~ Normal(m[s[1]], s2_hmm)
+    for i = 2:N
+        s[i] ~ Categorical(T[s[i-1]])
+        x[i] ~ Normal(m[s[i]], s2_hmm)
+    end
+end
+
+@model function imm_stick(y, α, K)
+    N = length(y)
+    crm = DirichletProcess(α)
+    v ~ filldist(StickBreakingProcess(crm), K - 1)
+    w = stickbreak(v)
+    
+    z = zeros(Int, N)
+    for n = 1:N
+        z[n] ~ Categorical(w)  # Cluster assignments
+    end
+
+    μ ~ filldist(Normal(0.0, s1_imm), K)  # Cluster centers
+
+    for n = 1:N
+        y[n] ~ Normal(μ[z[n]], s2_imm)  # Observations
+    end
+end
+\end{lstlisting}
+  \caption{Gaussian mixture model, hidden Markov model, and infinite mixture model using a
+    stick-breaking construction.  The two-step calculation of \texttt{w} via \texttt{v} is a
+    technicality due to \turingjl{}'s handling of nonparametric models.  The function
+    \texttt{stickbreak} normalizes the stick-lengths \texttt{v} into a Dirichlet-like distribution.}
+  \label{lst:evalation-models}
+\end{lstfloat}
+
+Three interesting metrics: compilation time, sampling speed, and performance of chains (although
+this compares Gibbs to PG, not the implementation).
+
+Concrete parameters in table
 
 \begin{table}[t]
   \centering
@@ -224,8 +375,8 @@ conditionals.
     \toprule
      & & \multicolumn{3}{c@{\hskip 10mm}}{\textbf{GMM}} & \multicolumn{3}{c}{\textbf{HMM}} & \multicolumn{1}{c}{\textbf{IMM}} \\
     \midrule
-    & HMC Steps & & 10 & & & 10 & & 10 \\
     & HMC Step size & & 0.1 & & & 0.1 & & 0.1 \\
+    & HMC Steps & & 10 & & & 10 & & 10 \\
     \midrule
     \textbf{AG + HMC} & Data size & 10 & 25 & 50 & 10 & 25 & 50 & 10 \\
     & Chains & 30 & 30 & 30 & 30 & 30 & 30 & 30 \\
@@ -249,36 +400,11 @@ conditionals.
   \label{tab:autogibbs-params}
 \end{table}
 
-\begin{equation}
-  \label{eq:gmm}
-  \begin{aligned}
-    \mu_{k} &\from \Normal(0, \sigma_{1}), \quad k = 1, \ldots, K \\
-    w &\from \distr{Dirichlet(K)} \\
-    z_{n} &\from \distr{Discrete}([1, \ldots, K], w), \quad n = 1, \ldots, N \\
-    x_{n} &\from \Normal(\mu_{z_{n}}, \sigma_{1}), \quad n = 1, \ldots, N
-  \end{aligned}
-\end{equation}
 
-\begin{equation}
-  \label{eq:hmm}
-  \begin{aligned}
-    T_{k} &\from \distr{Dirichlet}(K), \quad k = 1, \ldots, K \\
-    m_{k} &\from \Normal(k, \sigma_{1}), \quad k = 1, \ldots, K \\
-    s_{1} &\from \distr{Categorical}(K) \\
-    s_{k} &\from \distr{Categorical}(T_{s_{k-1}}), \quad k = 2, \ldots, N \\
-    x_{k} &\from \Normal(m_{s_{k}}, \sigma_{2}), \quad k = 1, \ldots, N
-  \end{aligned}
-\end{equation}
 
-\begin{equation}
-  \label{eq:imm}
-  \begin{aligned}
-    w &\from \distr{TruncatedStickBreakingProcess(\alpha, K)} \\
-    z_{n} &\from \distr{Categorical}(w), \quad n = 1, \ldots, N \\
-    \mu_{k} &\from \Normal(0, \sigma_{1}), \quad k = 1, \ldots, K \\
-    y_{n} &\from \Normal(\mu_{z_{n}}, \sigma_{2}), \quad n = 1, \ldots, N
-  \end{aligned}
-\end{equation}
+
+
+
 
 % extraction times
 % Measuring both compilation of the traced code and the conditional calculation.",
