Some more references, explain metrics

--- a/thesis/refs.bib
+++ b/thesis/refs.bib
@@ -481,6 +481,21 @@
   number = {1}
 }
 
+@article{gelman1992inference,
+  title = {Inference from {{Iterative Simulation Using Multiple Sequences}}},
+  author = {Gelman, Andrew and {work(s):}, Donald B. Rubin Reviewed},
+  date = {1992},
+  journaltitle = {Statistical Science},
+  volume = {7},
+  pages = {457--472},
+  abstract = {The Gibbs sampler,the algorithmof Metropolisand similar iterativesimulationmethodsarepotentiallyveryhelpfufl orsummarizing multivariatedistributionsU. sed naively,however,iterativesimulation can give misleadinganswers.Our methodsare simpleand generally applicableto theoutputofanyiterativesimulationt; heyare designed forresearchersprimarilyinterestedin the scienceunderlyingthe data and modelstheyare analyzingr, atherthanforresearcherisnterestedin the probabilitytheoryunderlyingthe iterativesimulationsthemselves. Ourrecommendesdtrategyis touse severalindependenstequences,with startingpointssampledfroman overdispersedistributionA.t eachstep of the iterativesimulationw, e obtain,foreach univariateestimandof interesta, distributionaelstimateand an estimateofhowmuchsharper thedistributionaelstimatemightbecomeifthesimulationswerecontinued indefinitelyBe. cause ourfocusis on appliedinferencfeorBayesian posteriordistributionisnrealproblemsw, hichoftentendtowardnormalityaftertransformationasnd marginalizationw, e deriveourresultsas normal-theoraypproximationtso exact Bayesian inferencec,onditional on theobservedsimulationsT. he methodsare illustratedon a randomeffectms ixturemodelappliedto experimentaml easurementosfreaction timesofnormaland schizophrenipcatients.},
+  eprint = {2246093},
+  eprinttype = {jstor},
+  file = {/home/philipp/Zotero/storage/HKYSQLA5/Gelman and work(s) - 1992 - Inference from Iterative Simulation Using Multiple.pdf},
+  langid = {english},
+  number = {4}
+}
+
 @article{geman1984stochastic,
   title = {Stochastic Relaxation, {{Gibbs}} Distributions, and the {{Bayesian}} Restoration of Images},
   author = {Geman, Stuart and Geman, Donald},
