--- a/thesis/refs.bib
+++ b/thesis/refs.bib
@@ -77,6 +77,16 @@
   organization = {{Swift.org}}
 }
 
+@book{barthe2020foundations,
+  title = {Foundations of {{Probabilistic Programming}}},
+  editor = {Barthe, Gilles and Katoen, Joost-Pieter and Silva, Alexandra},
+  date = {2020},
+  publisher = {{Cambridge University Press}},
+  file = {/home/philipp/Zotero/storage/7MYRU3WX/Barthe - FOUNDATIONS OF PROBABILISTIC PROGRAMMING.pdf},
+  isbn = {978-1-108-77075-0},
+  langid = {english}
+}
+
 @article{bartholomew-biggs2000automatic,
   title = {Automatic Differentiation of Algorithms},
   author = {Bartholomew-Biggs, Michael and Brown, Steven and Christianson, Bruce and Dixon, Laurence},
