--- a/thesis/tracking_models.tex
+++ b/thesis/tracking_models.tex
@@ -217,13 +217,13 @@ In \turingjl{}, models are much less restricted, and the symbolic form has to re
 outside, as we have seen.  To focus on the principal ideas and not to extend the scope too much, the
 implementation described in this section was restricted to finite, discrete conditionals, which are
 trivial to sample from, given the respective log-density.  Since the construction of conditional
-log-densities is independent from the normalization step, though, this can serve as a stating point
+log-densities is independent from the normalization step, though, this can serve as a starting point
 for further, more general conditional samplers, as those in JAGS and BUGS.  Additionally, and this
 is a more fundamental limitation, the models to which the extraction algorithm can be applied must
-be static in a specific sense: the whole Markov blanket of the variable in question must be
-reachedable and unique within one run of model tracking.  A large fraction of the models used in
-practise do fulfill this condition, though.  As this problem is difficult so solve in general, the
-same constraint applies to JAGS and BUGS, which makes \autogibbsjl{} not more limited than these.
+be static in a specific sense: the whole Markov blanket of the variable in question must be unique,
+and reachedable within one run of model tracking.  A large fraction of the models used in practise
+do fulfill this condition, though.  As this problem is difficult so solve in general, the same
+constraint applies to JAGS and BUGS, which makes \autogibbsjl{} not more limited than these.
 
 The implementation of the conditional extraction system involves three main parts:
 \begin{enumerate}
@@ -258,20 +258,19 @@ once; as soon as a conditional is constructed, it can be reused in arbitrarily m
 the same model.  The finished conditionals then do not take so much time anymore, on the contrary:
 they are much faster than other within-Gibbs samplers, since they only involve evaluating a fixed
 expression, constructing a distribution, and sampling from it once (and even this could be sped up
-further).
+further).  This makes it possible to sample much longer chains in the same time.
 
-So, overall, while the implementation in current form is not very applicable in practise, it is very
-much so in principle.  Based on the lessons learned through this work, further contributions to
-Gibbs sampling in \turingjl{} are already planned (although not necessarily based on
-\autogibbsjl{}).
+So, overall, while the implementation in current form is not very applicable in practise for all
+cases, it is very much so in principle.  Based on the lessons learned through this work, further
+contributions to Gibbs sampling in \turingjl{} are already planned (although not necessarily based
+on \autogibbsjl{}).
 
 \newthought{For a more {q}uantitative} point of view, let us now turn to some empirical evaluations.
 Besides several unit tests for correctness of the derived dependencies and conditionals on a variety
 of models chosen to test certain features and corner cases, an experimental comparison of
 \autogibbsjl{} and existing \turingjl{} samplers has been conducted.  For this purpose, three
 off-the-shelf Bayesian models were chosen: a Gaussian mixture model with known variances and priors
-over cluster centers, weights, and assignments \parencite[section
-6.2]{marin2007bayesian},
+over cluster centers, weights, and assignments \parencite[section 6.2]{marin2007bayesian},
 \begin{equation}
   \label{eq:gmm}
   \begin{aligned}
@@ -282,7 +281,7 @@ over cluster centers, weights, and assignments \parencite[section
   \end{aligned}
 \end{equation}
 a hidden Markov model with known variances and priors over transition and emission
-probabilities\parencite[section 7.3]{marin2007bayesian},
+probabilities \parencite[section 7.3]{marin2007bayesian},
 \begin{equation}
   \label{eq:hmm}
   \begin{aligned}
@@ -305,14 +304,13 @@ finite GMM above, to represent a nonparametric example \parencite[section 2.2]{h
   \end{aligned}
 \end{equation}
 The models are implemented in \dppljl{} as shown in listing~\ref{lst:evaluation-models}.
-
 \begin{lstfloat}[p]
 \begin{lstlisting}[style=lstfloat]
 @model function gmm(x, K)
     N = length(x)
-    μ ~ filldist(Normal(0.0, s1_gmm), K)  # Cluster centers
     w ~ Dirichlet(K, 1/K)  # Cluster association prior
     z ~ filldist(DiscreteNonParametric(1:K, w), N)  # Cluster assignments
+    μ ~ filldist(Normal(0.0, s1_gmm), K)  # Cluster centers
 
     for n = 1:N
         x[n] ~ Normal(μ[z[n]], s2_gmm)  # Observations
@@ -321,23 +319,26 @@ end
 
 @model function hmm(x, K, ::Type{T}=Float64) where {T<:Real}
     N = length(x)
-    s = zeros(Int, N)  # State sequence
-    m = Vector{T}(undef, K)  # Emission matrix
-    T = Vector{Vector{T}}(undef, K)  # Transition matrix
 
-    # Assign distributions to each element of the transition matrix 
-    # and the emission matrix.
+    T = Vector{Vector{X}}(undef, K)
     for i = 1:K
-        T[i] ~ Dirichlet(K, 1/K)
-        m[i] ~ Normal(i, s1_hmm)
+        T[i] ~ Dirichlet(K, 1/K)  # Transition probabilities
     end
     
-    # Observe each point of the input
+    s = zeros(Int, N)
     s[1] ~ Categorical(K)
+    for i = 2:N
+        s[i] ~ Categorical(T[s[i-1]])  # State sequence
+    end
+    
+    m = Vector{T}(undef, K)
+    for i = 1:K
+        m[i] ~ Normal(i, s1_hmm)  # Emission probabilities
+    end
+    
     x[1] ~ Normal(m[s[1]], s2_hmm)
     for i = 2:N
-        s[i] ~ Categorical(T[s[i-1]])
-        x[i] ~ Normal(m[s[i]], s2_hmm)
+        x[i] ~ Normal(m[s[i]], s2_hmm)  # Observations
     end
 end
 
@@ -345,7 +346,7 @@ end
     N = length(y)
     crm = DirichletProcess(α)
     v ~ filldist(StickBreakingProcess(crm), K - 1)
-    w = stickbreak(v)
+    w = stickbreak(v)  # Cluster weights
     
     z = zeros(Int, N)
     for n = 1:N
@@ -365,27 +366,26 @@ end
     \texttt{stickbreak} normalizes the stick-lengths \texttt{v} into a Dirichlet-like distribution.}
   \label{lst:evaluation-models}
 \end{lstfloat}
-
 The three interesting classes of metrics to evaluate are, in the case of this work,
 \begin{enumerate}
   \firmlist
 \item the \enquote{compilation time} of \autogibbsjl{}, i.e., the time it takes to extract a
   conditional,
 \item the sampling speed when used as component of a within-Gibbs sampler, and
-\item the quality of the resulting chains, in terms of convergence and variance diagnostics
-  (although this really measures Gibbs sampling, not the implementation of \autogibbsjl{}, it is a
-  relevant comparison for the practitioner).
+\item the quality of the resulting chains, in terms of convergence and variance diagnostics.
+  (Although this really measures Gibbs sampling, not the implementation of \autogibbsjl{}, it is a
+  relevant comparison for the practitioner.)
 \end{enumerate}
 Each of the test models involves one discrete and two continuous parameters.  As benchmark for
 \autogibbsjl{}'s static conditional (AG), it is compared to \turingjl{}'s Particle Gibbs sampler
 (PG), which is also suited to discrete parameters.  Continuous variables are all sampled using
 Hamiltonian Monte Carlo (HMC) with hand-tuned parameters per model.  The experiments have been set
-up such that each model is evaluated for ten chains per parameter combination, varying between AG
-and PG, three values for the number of particles used by PG (since more particles usually lead to
-better results, but higher sampling times), and three values for the number of observations (since
-these determine the size of the trace, and thus have an influence on both AG's compile times and the
-overall sampling time).  Concrete parameters in table~\ref{tab:autogibbs-params}.\todo{more
-  meaningful table}
+up such that each model is evaluated for ten chains of length \(10000\), varying between AG and PG,
+and four different values for the number of observations (since these determine the size of the
+trace, and thus have an influence on both AG's compile times and the overall sampling time).  PG was
+always used with \(100\) particles, since lower values did lead to convergent chains.
+
+Concrete parameters in table~\ref{tab:autogibbs-params}.\todo{more meaningful table}
 
 \begin{table}[t]
   \centering
@@ -394,7 +394,7 @@ overall sampling time).  Concrete parameters in table~\ref{tab:autogibbs-params}
     \toprule
      & & \multicolumn{3}{c@{\hskip 10mm}}{\textbf{GMM}} & \multicolumn{3}{c}{\textbf{HMM}} & \multicolumn{1}{c}{\textbf{IMM}} \\
     \midrule
-    & HMC Step size & & 0.1 & & & 0.1 & & 0.1 \\
+    & HMC Step size & & 0.05 & & & 0.05 & & 0.05 \\
     & HMC Steps & & 10 & & & 10 & & 10 \\
     \midrule
     \textbf{AG + HMC} & Observations & 10 & 25 & 50 & 10 & 25 & 50 & 10 \\
@@ -402,26 +402,16 @@ overall sampling time).  Concrete parameters in table~\ref{tab:autogibbs-params}
     & Compilations & 3 & 3 & 3 & 3 & 3 & 3 & 3 \\
     \addlinespace
     \textbf{PG + HMC,} & Observations & 10 & 25 & 50 & 10 & 25 & 50 & 10 \\
-    \textbf{20 particles} & Chains & 10 & 10 & 10 & 10 & 10 & 10 & 10 \\
-    \addlinespace
-    \textbf{PG + HMC,} & Observations & 10 & 25 & 50 & 10 & 25 & 50 & 10 \\
-    \textbf{35 particles} & Chains & 10 & 10 & 10 & 10 & 10 & 10 & 10 \\
-    \addlinespace
-    \textbf{PG + HMC,} & Observations & 10 & 25 & 50 & 10 & 25 & 50 & 10 \\
-    \textbf{50 particles} & Chains & 10 & 10 & 10 & 10 & 10 & *x & 10 \\
+     & Chains & 10 & 10 & 10 & 10 & 10 & 10 & 10 \\
     \bottomrule
   \end{tabularx}
   \caption{Experimental conditions for evaluating AutoGibbs (AG) agains Particle Gibbs (PG).  Chains
-    were always of length \(5000\).  A new static Gibbs conditional was extracted for each block of
+    were always of length \(10000\).  A new static Gibbs conditional was extracted for each block of
     \(10\) chains that was run with the same parameters while Particle Gibbs was varied over the
     three particle sizes.  Particle Gibbs with 50 particles was sometimes killed due to timeouts on
     the server.}
   \label{tab:autogibbs-params}
 \end{table}
-
-
-
-
 
 
 
