--- a/thesis/refs.bib
+++ b/thesis/refs.bib
@@ -82,7 +82,7 @@
   editor = {Barthe, Gilles and Katoen, Joost-Pieter and Silva, Alexandra},
   date = {2020},
   publisher = {{Cambridge University Press}},
-  file = {/home/philipp/Zotero/storage/7MYRU3WX/Barthe - FOUNDATIONS OF PROBABILISTIC PROGRAMMING.pdf},
+  file = {/home/philipp/Zotero/storage/7MYRU3WX/Barthe et al. - 2020 - Foundations of Probabilistic Programming.pdf},
   isbn = {978-1-108-77075-0},
   langid = {english}
 }
