--- a/thesis/jlcode.sty
+++ b/thesis/jlcode.sty
@@ -1048,6 +1048,7 @@ literate=
 {⟩}{{\ucc{${\rangle}$}}}{1}
 {→}{{\ucc{${\rightarrow}$}}}{2}
 {←}{{\ucc{${\leftarrow}$}}}{2}
+{⤳}{{\ucc{${\leadsto}$}}}{2}
 % {⩪}{{\ucc{${\dot\mathtt{\sim}}$}}}{1}
 %
 % box drawing characters
